add some basic paper skeleton

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -27,7 +27,19 @@
 \end{abstract}
 \section{Introduction}
 
+\section{Related Works}
+
+\section{Methodology}
+
+\section{Results}
+
+\section{Discussion}
+
+\section{Secure Python Coding Standards}
+
 \section{Conclusion}
+
+\section{Appendix}
 
 \bibliographystyle{plain}
 \bibliography{references}
