--- a/doc/main.tex
+++ b/doc/main.tex
@@ -23,14 +23,17 @@
 \maketitle
 
 \begin{abstract}
-    
+      
 \end{abstract}
 \section{Introduction}
-
+3 R's\\
+-Python style\\
+-Databases with vulnerabilities\\
 \section{Related Works}
 
 \section{Methodology}
-
+Pylint\\
+Bandit\\
 \subsection{Dataset}
 For out data set, we used Safety DB [ref], an online repository maintained by pyup.io which keeps a list of Python packages with known vulnerabilities. 
 
