change to conference template indead of journal template for report

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -1,19 +1,10 @@
-\documentclass[acmlarge]{acmart}
+\documentclass[sigconf]{acmart}
+
 \usepackage[utf8]{inputenc}
 
-\title{CS230-Report}
+\title{Does Following Coding Standards Enhance Security? An Empirical Study}
 
-\author{Nandini Chitale}
-
-\author{Ruth Johnson}
-
-\author{Shuyang Liu}
-
-\author{Xufan Wang}
-
-\author{Carolyn Yen}
-
-\author{Haikuo Yin}
+\author{Nandini Chitale, Ruth Johnson, Shuyang Liu, Xufan Wang, Carolyn Yen, Haikuo Yin}
 
 \usepackage{natbib}
 \usepackage{graphicx}
