add 's' to the title

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -2,7 +2,7 @@
 
 \usepackage[utf8]{inputenc}
 
-\title{Does Following Coding Standards Enhance Security? An Empirical Study}
+\title{Does Following Coding Standards Enhances Security? An Empirical Study}
 
 \author{Nandini Chitale, Ruth Johnson, Shuyang Liu, Xufan Wang, Carolyn Yen, Haikuo Yin}
 
