385 benchmarks without file size

--- a/stat_analysis/combined_df.ipynb
+++ b/stat_analysis/combined_df.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,10 +20,12 @@
     "path_stem = \"/Users/nandini/Desktop/CS230/CS230/stat_analysis/\"\n",
     "\n",
     "# Directory containing pylint output - download from https://drive.google.com/open?id=1DLiYPP594fUsGQsNAM5lU_b_-xQ2xxvg\n",
-    "pylint_path = path_stem + \"pylintcsv/\"\n",
+    "pylint_path = path_stem + \"Pylint_output/\"\n",
     "\n",
     "# Directory containing bandit output - download from https://drive.google.com/open?id=1lxTNIE0wMLc0Ixb6HhcQxgLReG_jTpA6\n",
-    "bandit_path = path_stem + \"banditcsv/\""
+    "bandit_path = path_stem + \"Bandit_output/\"\n",
+    "\n",
+    "# Benchmark size"
    ]
   },
   {
@@ -35,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,10 +57,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "385"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(pylint_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -92,69 +114,69 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>alt-model-checkpoint-1.0.0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>14</td>\n",
-       "      <td>2</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "      <td>23</td>\n",
+       "      <th>Radicale-1.1.1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>242.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>bigchaindb_driver-0.5.1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>35</td>\n",
-       "      <td>141</td>\n",
-       "      <td>41</td>\n",
-       "      <td>63</td>\n",
-       "      <td>0</td>\n",
-       "      <td>280</td>\n",
+       "      <th>trio-websockets-0.2</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>94.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>birdhousebuilder.recipe.nginx-0.1.4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>64</td>\n",
-       "      <td>6</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0</td>\n",
-       "      <td>79</td>\n",
+       "      <th>zhmcclient-0.20.0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>556.0</td>\n",
+       "      <td>1521.0</td>\n",
+       "      <td>1071.0</td>\n",
+       "      <td>116.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3264.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>bise.theme-1.20.1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>29</td>\n",
-       "      <td>155</td>\n",
-       "      <td>44</td>\n",
-       "      <td>86</td>\n",
-       "      <td>0</td>\n",
-       "      <td>314</td>\n",
+       "      <th>ddtrace-0.10.1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>600.0</td>\n",
+       "      <td>191.0</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>915.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>bbcode-1.0.8</th>\n",
-       "      <td>0</td>\n",
-       "      <td>11</td>\n",
-       "      <td>33</td>\n",
-       "      <td>19</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>63</td>\n",
+       "      <th>ZopeSkel-2.10</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>389.0</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>533.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                     I   R    C   W   E  F  TOTAL_PYLINT\n",
-       "alt-model-checkpoint-1.0.0           0   1   14   2   6  0            23\n",
-       "bigchaindb_driver-0.5.1              0  35  141  41  63  0           280\n",
-       "birdhousebuilder.recipe.nginx-0.1.4  0   2   64   6   7  0            79\n",
-       "bise.theme-1.20.1                    0  29  155  44  86  0           314\n",
-       "bbcode-1.0.8                         0  11   33  19   0  0            63"
+       "                       I      R       C       W      E    F  TOTAL_PYLINT\n",
+       "Radicale-1.1.1       0.0   39.0    56.0    69.0   78.0  0.0         242.0\n",
+       "trio-websockets-0.2  0.0    0.0    44.0     9.0   41.0  0.0          94.0\n",
+       "zhmcclient-0.20.0    0.0  556.0  1521.0  1071.0  116.0  0.0        3264.0\n",
+       "ddtrace-0.10.1       0.0   55.0   600.0   191.0   69.0  0.0         915.0\n",
+       "ZopeSkel-2.10        0.0   30.0   389.0    97.0   17.0  0.0         533.0"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,6 +221,7 @@
     "\n",
     "for file in os.listdir(directory): \n",
     "    filename = os.fsdecode(file) \n",
+    "    print(filename)\n",
     "    benchmark_name = filename.split('_bandit.txt')[0]\n",
     "    full_path = bandit_path + filename\n",
     "    df = pd.read_csv(full_path)\n",
@@ -237,7 +260,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "491"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(bandit_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -288,104 +331,9 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>boss-cli-0.3.0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>19</td>\n",
-       "      <td>1</td>\n",
-       "      <td>20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>archmage-0.3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <th>restkit-4.2.2</th>\n",
+       "      <td>30</td>\n",
        "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ansible-vault-1.0.4</th>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>anncolvar-0.3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>aspen-0.38</th>\n",
-       "      <td>5</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -393,6 +341,29 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>45</td>\n",
+       "      <td>7</td>\n",
+       "      <td>53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>streamsx.objectstorage-1.1.0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
@@ -403,9 +374,81 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>11</td>\n",
-       "      <td>3</td>\n",
-       "      <td>14</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>recurly-2.6.2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>15</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>peewee-2.9.2</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>13</td>\n",
+       "      <td>8</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>drf-tracking-1.2.0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -413,31 +456,38 @@
        "</div>"
       ],
       "text/plain": [
-       "                     B101  B102  B103  B104  B105  B106  B107  B108  B109  \\\n",
-       "boss-cli-0.3.0          0     0     0     0     0     0     0     0     0   \n",
-       "archmage-0.3            0     0     0     0     0     0     0     0     0   \n",
-       "ansible-vault-1.0.4     3     0     0     0     0     0     0     0     0   \n",
-       "anncolvar-0.3           0     0     0     0     0     0     0     0     0   \n",
-       "aspen-0.38              5     0     0     1     0     0     0     0     0   \n",
+       "                              B101  B102  B103  B104  B105  B106  B107  B108  \\\n",
+       "restkit-4.2.2                   30     2     0     0     1     0     0     0   \n",
+       "streamsx.objectstorage-1.1.0     0     0     0     0     0     0     0     0   \n",
+       "recurly-2.6.2                    1     0     0     0     1     1     0     0   \n",
+       "peewee-2.9.2                     4     1     0     0     4     0     0     0   \n",
+       "drf-tracking-1.2.0               0     0     0     0     0     0     0     0   \n",
        "\n",
-       "                     B110      ...       B609  B610  B611  B701  B702  B703  \\\n",
-       "boss-cli-0.3.0          0      ...          0     0     0     0     0     0   \n",
-       "archmage-0.3            0      ...          0     0     0     0     0     0   \n",
-       "ansible-vault-1.0.4     0      ...          0     0     0     0     0     0   \n",
-       "anncolvar-0.3           0      ...          0     0     0     0     0     0   \n",
-       "aspen-0.38              0      ...          0     0     0     0     0     0   \n",
+       "                              B109  B110      ...       B609  B610  B611  \\\n",
+       "restkit-4.2.2                    0     1      ...          0     0     0   \n",
+       "streamsx.objectstorage-1.1.0     0     0      ...          0     0     0   \n",
+       "recurly-2.6.2                    0     0      ...          0     0     0   \n",
+       "peewee-2.9.2                     0     1      ...          0     0     0   \n",
+       "drf-tracking-1.2.0               0     1      ...          0     0     0   \n",
        "\n",
-       "                     HIGH_SEVERITY  LOW_SEVERITY  MED_SEVERITY  TOTAL_BANDIT  \n",
-       "boss-cli-0.3.0                   0            19             1            20  \n",
-       "archmage-0.3                     2             4             0             6  \n",
-       "ansible-vault-1.0.4              0             3             1             4  \n",
-       "anncolvar-0.3                    0             0             0             0  \n",
-       "aspen-0.38                       0            11             3            14  \n",
+       "                              B701  B702  B703  HIGH_SEVERITY  LOW_SEVERITY  \\\n",
+       "restkit-4.2.2                    0     0     0              1            45   \n",
+       "streamsx.objectstorage-1.1.0     0     0     0              0             0   \n",
+       "recurly-2.6.2                    0     0     0              0             9   \n",
+       "peewee-2.9.2                     0     0     0              4            13   \n",
+       "drf-tracking-1.2.0               0     0     0              0             7   \n",
+       "\n",
+       "                              MED_SEVERITY  TOTAL_BANDIT  \n",
+       "restkit-4.2.2                            7            53  \n",
+       "streamsx.objectstorage-1.1.0             0             0  \n",
+       "recurly-2.6.2                           15            24  \n",
+       "peewee-2.9.2                             8            25  \n",
+       "drf-tracking-1.2.0                       0             7  \n",
        "\n",
        "[5 rows x 76 columns]"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
