added benchmark size column

--- a/stat_analysis/combined_df.ipynb
+++ b/stat_analysis/combined_df.ipynb
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -708,7 +708,7 @@
        "[5 rows x 83 columns]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +729,7 @@
        "385"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +771,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>FILE_SIZE</th>\n",
+       "      <th>BENCHMARK_SIZE</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
@@ -804,39 +804,28 @@
        "</div>"
       ],
       "text/plain": [
-       "                        FILE_SIZE\n",
-       "0                                \n",
-       "aiida-core-0.12.2            9256\n",
-       "aiocouchdb-0.5.0              412\n",
-       "aiohttp-0.16.2               8316\n",
-       "aioli-0.0.4                    72\n",
-       "aldryn-django-1.6.11.1        128"
+       "                        BENCHMARK_SIZE\n",
+       "0                                     \n",
+       "aiida-core-0.12.2                 9256\n",
+       "aiocouchdb-0.5.0                   412\n",
+       "aiohttp-0.16.2                    8316\n",
+       "aioli-0.0.4                         72\n",
+       "aldryn-django-1.6.11.1             128"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "file_size = pd.read_csv(path_stem + \"benchmark_size.csv\", header=None)\n",
-    "file_size = file_size.set_index(0)\n",
-    "file_size = file_size.rename({1:'FILE_SIZE'}, axis='columns')\n",
-    "file_size.head()"
+    "benchmark_size = pd.read_csv(path_stem + \"benchmark_size.csv\", header=None).set_index(0).rename({1:'BENCHMARK_SIZE'}, axis='columns')\n",
+    "benchmark_size.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "combined_df = combined_df.join(file_size)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -880,7 +869,7 @@
        "      <th>LOW_SEVERITY</th>\n",
        "      <th>MED_SEVERITY</th>\n",
        "      <th>TOTAL_BANDIT</th>\n",
-       "      <th>FILE_SIZE</th>\n",
+       "      <th>BENCHMARK_SIZE</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1017,42 +1006,43 @@
        "CairoSVG-1.0.20      0.0   33.0   250.0    20.0    4.0  0.0         307.0   \n",
        "CherryMusic-0.35.2   0.0  185.0  1494.0   942.0  280.0  0.0        2901.0   \n",
        "\n",
-       "                    B101  B102  B103    ...      B610  B611  B701  B702  B703  \\\n",
-       "AuthBWC-0.1.3        253     0     0    ...         0     0     0     0     0   \n",
-       "Beaker-0.9.3           1     0     0    ...         0     0     0     0     0   \n",
-       "CLAM-0.9.9.1          32     2     1    ...         0     0     0     0     0   \n",
-       "CairoSVG-1.0.20        0     0     0    ...         0     0     0     0     0   \n",
-       "CherryMusic-0.35.2   130     0     2    ...         0     0     0     0     0   \n",
+       "                    B101  B102  B103       ...        B610  B611  B701  B702  \\\n",
+       "AuthBWC-0.1.3        253     0     0       ...           0     0     0     0   \n",
+       "Beaker-0.9.3           1     0     0       ...           0     0     0     0   \n",
+       "CLAM-0.9.9.1          32     2     1       ...           0     0     0     0   \n",
+       "CairoSVG-1.0.20        0     0     0       ...           0     0     0     0   \n",
+       "CherryMusic-0.35.2   130     0     2       ...           0     0     0     0   \n",
        "\n",
-       "                    HIGH_SEVERITY  LOW_SEVERITY  MED_SEVERITY  TOTAL_BANDIT  \\\n",
-       "AuthBWC-0.1.3                   0           258             0           258   \n",
-       "Beaker-0.9.3                    1             9             5            15   \n",
-       "CLAM-0.9.9.1                   24            65            81           170   \n",
-       "CairoSVG-1.0.20                 0             3             5             8   \n",
-       "CherryMusic-0.35.2              3           148            12           163   \n",
+       "                    B703  HIGH_SEVERITY  LOW_SEVERITY  MED_SEVERITY  \\\n",
+       "AuthBWC-0.1.3          0              0           258             0   \n",
+       "Beaker-0.9.3           0              1             9             5   \n",
+       "CLAM-0.9.9.1           0             24            65            81   \n",
+       "CairoSVG-1.0.20        0              0             3             5   \n",
+       "CherryMusic-0.35.2     0              3           148            12   \n",
        "\n",
-       "                    FILE_SIZE  \n",
-       "AuthBWC-0.1.3             336  \n",
-       "Beaker-0.9.3              192  \n",
-       "CLAM-0.9.9.1             1844  \n",
-       "CairoSVG-1.0.20           200  \n",
-       "CherryMusic-0.35.2       3392  \n",
+       "                    TOTAL_BANDIT  BENCHMARK_SIZE  \n",
+       "AuthBWC-0.1.3                258             336  \n",
+       "Beaker-0.9.3                  15             192  \n",
+       "CLAM-0.9.9.1                 170            1844  \n",
+       "CairoSVG-1.0.20                8             200  \n",
+       "CherryMusic-0.35.2           163            3392  \n",
        "\n",
        "[5 rows x 84 columns]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "combined_df = combined_df.join(benchmark_size)\n",
     "combined_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1061,7 +1051,7 @@
        "385"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1079,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
